# Clash-RS

./: CHANGELOG.md  README.md
clash-ffi/: Cargo.toml
clash-ffi/src/: lib.rs
clash-lib/: Cargo.toml
clash-lib/src/app/api/handlers/: connection.rs
clash-lib/src/app/dispatcher/: statistics_manager.rs
clash-lib/src/app/dns/resolver/: enhanced.rs
clash-lib/src/app/inbound/: network_listener.rs
clash-lib/src/app/outbound/: manager.rs
clash-lib/src/config/internal/: listener.rs  proxy.rs
clash-lib/src/proxy/converters/: http.rs  mod.rs  shadowsocks.rs  trojan.rs  utils.rs  vless.rs  vmess.rs
clash-lib/src/proxy/http/: mod.rs  outbound.rs
clash-lib/src/proxy/transport/: h3.rs  http1.rs  httpupgrade.rs  mkcp.rs  mod.rs  reality.rs  xhttp.rs
clash-lib/src/proxy/transport/simple_obfs/: mod.rs
clash-lib/src/proxy/trojan/: inbound.rs  mod.rs
clash-lib/src/proxy/utils/: proxy_connector.rs
clash-lib/src/proxy/vless/: inbound.rs  mod.rs
clash-lib/src/proxy/vmess/: inbound.rs  mod.rs
clash/tests/data/config/: config.test.yaml
clash/tests/data/config/listeners/: tunnel.yaml
clash_lib/src/: lib.rs  session.rs
clash_lib/src/app/outbound/: manager.rs
clash_lib/src/common/io/: mod.rs
clash_lib/src/config/internal/: mod.rs  proxy.rs  vless_custom.rs
clash_lib/src/proxy/: mod.rs
clash_lib/src/proxy/converters/: mod.rs  vless_custom.rs
clash_lib/src/proxy/vless_custom/: mod.rs
clash_lib/src/proxy/vless_custom/vless_impl/: datagram.rs  mod.rs  (+1 more)
clash_lib/src/proxy/vmess/: mod.rs
scripts/: build_apple.sh  build_ios.sh  build_universal.sh
(+2 files in other folders)
